# penquify

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/commands/: add-template.md  dataset.md  generate.md  penquify.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: agent-testing.mdx  changelog.mdx  concepts.mdx  create-dataset.mdx  custom-template.mdx  docs.json  documents.mdx  generate-from-json.mdx  introduction.mdx  mint.json  natural-language-config.mdx  occlusion-manifest.mdx  ocr-benchmark.mdx  quickstart.mdx  upload-pdf.mdx  variations.mdx  verification.mdx
docs/api/: generate-config.mdx  generate-dataset.mdx  generate-document.mdx  generate-from-upload.mdx  generate-photos.mdx  list-documents.mdx  overview.mdx  presets.mdx
docs/integrations/: agent-sdk.mdx  cli.mdx  docker.mdx  mcp-server.mdx  python.mdx
docs/sdk/: cameras.mdx  document.mdx  generators.mdx  upload.mdx  variation.mdx  verify.mdx
k8s/: deployment.yaml  secret.yaml
landing/: index.html
landing/assets/: dataset_summary.json  ground_truth.json  photo_cropped_header_occlusion.json  photo_cropped_header_verification.json
output/: guia_despacho_01182034.html
penquify/: __init__.py  agent_plugin.py  cli.py  mcp.py
penquify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
penquify/api/: server.py
penquify/generators/: config.py  pdf.py  (+3 more)
tests/: test_models.py  test_verify.py
(+10 files in other folders)
